classDiagram
    class Owner {
        +String name
        +int available_time
        +dict preferences
        +add_pet()
        +update_preferences()
        +view_tasks()
    }

    class Pet {
        +String name
        +String species
        +int age
        +String notes
        +list tasks
        +add_task()
        +remove_task()
        +get_tasks()
    }

    class Task {
        +String title
        +String task_type
        +int duration
        +int priority
        +String due_time
        +bool recurring
        +String status
        +mark_complete()
        +update_task()
        +is_conflicting()
    }

    class Scheduler {
        +list tasks
        +int available_time
        +list planned_tasks
        +sort_tasks()
        +detect_conflicts()
        +generate_daily_plan()
        +explain_plan()
    }

    Owner "1" --> "0..*" Pet : owns
    Pet "1" --> "0..*" Task : has
    Scheduler "1" ..> "0..*" Task : schedules